--- a/app/views/withdraws/_form.html.haml
+++ b/app/views/withdraws/_form.html.haml
@@ -1,12 +1,12 @@
 -# frozen_string_literal: true
-= simple_form_for(@withdraw) do |f|
+= simple_form_for(@withdraw, html: { class: "fancy-form" }) do |f|
   = f.error_notification
   = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
 
   .form-inputs
-    = f.input :amount
-    = f.association :user
-    = f.input :status
+    = f.input :amount, label: "Valor"
+    = f.input :user_id, as: :hidden, input_html: { value: current_user.id }
+    = f.input :status, as: :hidden, input_html: { value: "Saque solicitado" }
 
   .form-actions
-    = f.button :submit
+    %button.button.button--green{type: "submit"} Solicitar
