--- a/app/views/withdraws/new.html.haml
+++ b/app/views/withdraws/new.html.haml
@@ -1,5 +1,5 @@
-%h1 New withdraw
+.section
+  .section__content
+    %h1 Solicitação de saque
 
-= render 'form'
-
-= link_to 'Back', withdraws_path
+    = render 'form'
