--- a/app/views/users/validate_plan.html.haml
+++ b/app/views/users/validate_plan.html.haml
@@ -1,29 +1,36 @@
 .section.animated.fadeIn
   .section__content.text-center
-    %h1.title Validação da conta
-    %p Parabéns! Seu cadastro foi finalizado com sucesso. Para validar sua conta, é necessário realizar o pagamento do valor relativo ao seu plano.
+    - if ActivationRequest.find_by(requested_id: current_user.id).present?
+      %h1.title Tudo pronto
 
-    - if current_user.plan == "kit start"
-      %p No seu caso, o plano Kit start oferece ativação mediante a compra de um dos kits disponíveis abaixo. Você deverá escolher uma opção do kit start e realizar a compra do mesmo.
-    %p Quando seu pagamento for efetivado, sua conta será automaticamente validada.
+      %p Sua solicitação de ativação com saldo já foi enviada para o seu indicador. Caso você queira realizar o pagamento de outra forma, basta escolher a forma de pagamento abaixo e realizar sua ativação.
+      %p Caso você mesmo realize o pagamento, sua solicitação de ativação com saldo será automaticamente cancelada para evitar pagamentos duplicados.
 
-    %p Se você quiser ativar sua conta através do saldo do seu patrocinador/indicador, basta enviar o seu ID para ele que ele poderá realizar sua ativação através do escritório virutal do mesmo.
-    %strong= "Seu ID é: " + current_user.id.to_s
+    - else
+      %h1.title Validação da conta
+      %p Parabéns! Seu cadastro foi finalizado com sucesso. Para validar sua conta, é necessário realizar o pagamento do valor relativo ao seu plano.
 
-    %br
+      - if current_user.plan == "kit start"
+        %p No seu caso, o plano Kit start oferece ativação mediante a compra de um dos kits disponíveis abaixo. Você deverá escolher uma opção do kit start e realizar a compra do mesmo.
+      %p Quando seu pagamento for efetivado, sua conta será automaticamente validada.
 
-    = simple_form_for @user, remote: true, format: :js do |f|
-      = f.simple_fields_for :user_starter_pack, current_user.build_user_starter_pack do |g|
-        = g.input :starter_pack_id, as: :hidden
-    - if current_user.plan == "kit start"
-      .slider
-        .slider__content
-          - StarterPack.all.each do |pack|
-            .starter_pack_card{onclick: "setPack('#{pack.id}', $(this), '#{pack.price}')"}
-              = image_tag(pack.product.product_pictures.first.picture.url)
-              .starter_pack_card__content
-                %p= pack.product.name
-                %small= "R$ " + pack.price
+      %p Se você quiser ativar sua conta através do saldo do seu patrocinador/indicador, basta enviar o seu ID para ele que ele poderá realizar sua ativação através do escritório virutal do mesmo.
+      %strong= "Seu ID é: " + current_user.id.to_s
+
+      %br
+
+      = simple_form_for @user, remote: true, format: :js do |f|
+        = f.simple_fields_for :user_starter_pack, current_user.build_user_starter_pack do |g|
+          = g.input :starter_pack_id, as: :hidden
+      - if current_user.plan == "kit start"
+        .slider
+          .slider__content
+            - StarterPack.all.each do |pack|
+              .starter_pack_card{onclick: "setPack('#{pack.id}', $(this), '#{pack.price}')"}
+                = image_tag(pack.product.product_pictures.first.picture.url)
+                .starter_pack_card__content
+                  %p= pack.product.name
+                  %small= "R$ " + pack.price
 
     = render "purchases/payment_form"
 
@@ -37,6 +44,8 @@
       // make the starter pack card green
       $('.starter_pack_card').removeClass('starter_pack_card--active');
       card.addClass('starter_pack_card--active');
+
+      $('#allow_request').attr('disabled', false);
 
       $('form')[0].submit();
     }
