revised purchase_orders for aquisition users

--- a/app/assets/stylesheets/components/fancy-form.scss
+++ b/app/assets/stylesheets/components/fancy-form.scss
@@ -15,6 +15,13 @@
     border: none;
   }
 
+  input[type=radio], input[type=checkbox] {
+    height: unset;
+    width: unset;
+    display: unset;
+    margin-right: 5px;
+  }
+
   select {
     width: 100%;
     height: 35px;
