--- a/app/views/products/approve_products.html.haml
+++ b/app/views/products/approve_products.html.haml
@@ -1,6 +1,6 @@
 .section.text-center
   .section__content
-    - if @products.any?
+    - if @products.present? and @products.any?
       %h1.title Aprovar Produtos
 
       - @products.each do |product|
@@ -19,15 +19,6 @@
             %br
             = "Estoque: " + product.quantity + " Unidades"
             %br
-            -# %em Categorias:
-            -# - product.categories.each do |category|
-            -#   = ProductCategory.find_by_id(category).name + ", " if category.length > 0
-            -# %br
-            -# %em Tamanhos:
-            -# - product.sizes.each do |size|
-            -#   = ProductSize.find_by_id(size).size + ", " if size.length > 0
-            -# %br
-            -# %br
             %strong Nome e contato do vendedor:
             %br
             = product.user.name + " " + product.user.phone
@@ -42,5 +33,5 @@
       = image_tag("logo-vertical.png", style: "width: 100%; height: auto; max-width: 260px; margin: 0 auto;")
       %h1.title Você ainda não cadastrou nenhum produto
 
-    = link_to new_product_path do
+    = link_to new_product_path, "data-turbolinks" => "false" do
       %button.button.button--green Adicionar Produto
