--- a/app/views/layouts/mailer.html.haml
+++ b/app/views/layouts/mailer.html.haml
@@ -1,8 +1,5 @@
-!!!
 %html
-  %head
-    %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}/
-    :css
-      /* Email styles need to be inline */
   %body
+    %div{style: "width: 100%; text-align: center"}
+      = image_tag attachments['logo-horizontal.png'].url, style: "width: auto; height: auto"
     = yield
