--- a/app/views/products/approve_products.html.haml
+++ b/app/views/products/approve_products.html.haml
@@ -17,7 +17,7 @@
             %h3{style: "margin-bottom: 0"}= product.name
             = format_price(product.price)
             %br
-            = "Estoque: " + product.quantity + " Unidades"
+            -# = "Estoque: " + product.quantity + " Unidades"
             %br
             %strong Nome e contato do vendedor:
             %br
