--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -54,7 +54,13 @@
         %button.button.button--full-width.button--yellow.change-slide{type: "button", goTo: "4"} Voltar
 
       .slide.animated.fadeIn#6
-        = f.input :sizes, label: "Tamanhos disponíveis do produto", as: :select, collection: ProductSize.all, label_method: ProductSize.name, label_method: lambda { |size| "#{size.size}" }, input_html: { multiple: true, style: "min-height: 250px" }
+        %small Pelo menos um tamanho deve ser cadastrado
+        #sizes
+          = f.simple_fields_for :sizes do |size|
+            = render 'size_fields', f: size
+          .links
+            = link_to_add_association ' + ', f, :sizes, class: "add-association-button"
+        %br
 
         %button.button.button--full-width.button--pink.change-slide{type: "button", goTo: "7"} Próximo
         %br
@@ -63,7 +69,6 @@
 
       .slide.animated.fadeIn#7
         = f.input :hidden, as: :hidden
-        = f.input :quantity, label: "Quantidade disponível em estoque:"
         = f.input :location, label: "Localização:"
         = f.input :reference, label: "Referência:"
 
