--- a/app/views/products/_list.html.haml
+++ b/app/views/products/_list.html.haml
@@ -19,7 +19,7 @@
       - if product.product_pictures.count > 1
         %small Arraste para o lado para ver mais imagens
       .product__footer
-        - product.sizes.each do |id|
+        -# - product.sizes.each do |id|
           - if id.length > 0
             %input{type: "radio", name: "#{product.id}_size", id: "#{product.id}#{ProductSize.find(id).size}", style: "display: none"}
             %button{class: "size-button sb#{product.id}", type: "radio", "data-toggle" => "#{ProductSize.find(id).size}", "product-id" => "#{product.id}"}= ProductSize.find(id).size
@@ -27,7 +27,7 @@
         %br
         = format_price(product.price)
         %br
-        =product.description
+        = product.description
         %br
         %br
         = link_to add_item_path(product_id: product.id, size: product.sizes.first.size), remote: true do
