added model to manage bank accounts for TED payments

--- a/app/views/application/settings.html.haml
+++ b/app/views/application/settings.html.haml
@@ -68,3 +68,12 @@
 
     = link_to new_starter_pack_url, "data-turbolinks" => "false" do
       %button.button.button--green{type: "button"} Criar kit start
+
+    %br
+    %hr{style: "width: 100%"}
+    %br
+
+    %h3 Contas bancárias
+
+    = link_to bank_accounts_path do
+      %button.button.button--blue Gerenciar contas bancárias
