--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -2,48 +2,32 @@
   .section__content.text-center
     %h1.title Lista de usuários
 
-    .table
-      %table.table
-        %thead
-          %tr
-            %th
-            %th Nome
-            %th Graduação
-            %th Permissão
-            %th Ativar
-            %th
-            %th
-            %th
+    = form_for_filterrific @filterrific, html: { id: 'filterrific-no-ajax-auto-submit', class: "fancy-form" } do |f|
+      %div{style: 'width: 49.5%; display: inline-block'}
+        Nome
+        = f.text_field(:with_name)
+      %div{style: 'width: 49.5%; display: inline-block'}
+        CPF
+        = f.text_field(:with_social_security_number)
+      %div{style: 'width: 49.5%; display: inline-block'}
+        CNPJ
+        = f.text_field(:with_tax_number)
+      %div{style: 'width: 49.5%; display: inline-block'}
+        E-mail
+        = f.text_field(:with_email)
+      %div{style: 'width: 49.5%; display: inline-block'}
+        Telefone
+        = f.text_field(:with_phone_number)
+      %div{style: 'width: 49.5%; display: inline-block'}
+        = f.select(:sorted_by, @filterrific.select_options[:sorted_by])
+      %div{style: 'width: 49.5%; display: inline-block'}
+        = link_to('Limpar filtros', reset_filterrific_url, class: "button button--red color--white button--full-width")
+      %div{style: 'width: 49.5%; display: inline-block'}
+        %button.button.button--green.color--white.button--full-width{type: "submit"} Filtrar
 
-        %tbody
-          - @users.each do |user|
-            - unless User.find_by_id(user.id).deleted_at
-              %tr
-                %td
-                  = image_tag(user.avatar.url, style: "width: 50px; height: 50px; border-radius: 50%")
-                %td= user.name
-                %td= user.graduation.capitalize if user.graduation.present?
-                %td= translate_role(user.role)
-                - if user.activated?
-                  %td
-                    = simple_form_for user do |f|
-                      = f.input :activated, input_html: { value: "false" }, as: :hidden
-                      = f.submit "Inativar", confirm: "Tem certeza que deseja inativar este usuário?", class: "button button--red"
-                - else
-                  %td
-                    = simple_form_for user do |f|
-                      = f.input :activated, input_html: { value: "true" }, as: :hidden
-                      = f.submit "Ativar", confirm: "Tem certeza que deseja inativar este usuário?", class: "button button--green"
-                %td
-                  = link_to user do
-                    %img.destroy{src: "https://icongr.am/clarity/eye.svg?color=13B3F2", style: "max-width: 20px"}
-                %td
-                  = link_to edit_user_path(user), "data-turbolinks" => "false" do
-                    %img.destroy{src: "https://icongr.am/clarity/pencil.svg?color=ffc406", style: "max-width: 20px"}
-                %td
-                  = link_to user, method: :delete, data: { confirm: 'Tem certeza disso? Isso Não poderá ser desfeito!' } do
-                    %img.destroy{src: "https://icongr.am/clarity/trash.svg?color=F20505", style: "max-width: 20px"}
+    #filterrific_results
+      = render(partial: 'users/list', locals: { users: @users })
 
     %br
 
-    -# = link_to 'New User', new_user_path
+    = will_paginate @users
